--- a/main.css
+++ b/main.css
@@ -34,6 +34,6 @@ p{
 }
 
 body{
-    background-image: url(../HTMLCSSPreWork/3-Assets/artificial-intelligence-3706562_960_720.jpg);
+    background-image: url(./asset/artificial-intelligence-3706562_960_720.jpg);
 
 }
